--- a/resources/styles.css
+++ b/resources/styles.css
@@ -1,13 +1,15 @@
+/* to define the height and width of the body and the html file  */
 body, html {
     width: 100%;
     height:100%;
 }
+/* for body contains linearGradient */
 body {
     background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
 }
-
+/* for header  */
 #header {
     font-family: 'Courier New', Courier, monospace;
     margin-top: 5%;
@@ -19,6 +21,7 @@ body {
     text-decoration: underline;
     color: black;
 }
+/* for paragraph */
 #para {
     font-family: Georgia, 'Times New Roman', Times, serif;
     text-align: center;
@@ -34,7 +37,9 @@ body {
     background-color: white;
     margin-bottom: 5%;
 }
+/* for bmr form  */
 #bmr-form {
+    /* 6 different css styles including flex for the form  */
     display: flex;
     flex-direction: column;
     width: 50vw;
@@ -50,23 +55,25 @@ body {
     align-items: center;
     background-color: white;
 }
+/* padded space from around the top of the label  */
 label {
     padding-top: 10%;
 }
+/* input field  */
 input {
     background-color:white;
-    width: 100px;
-    /* border: ; */
-    
+    width: 100px;    
 }
+/* select/option field  */
 select {
     background-color:white;
     width: 100px;
 }
+/* for the display for the bmr */
 #bmr {
     width: 100px;
 }
-
+/* made to change the the gradient background at different times */
 @keyframes gradient {
     0% {
         background-position: 0% 50%;
